--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-env": "^7.22.20",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.22",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.11.0",
@@ -37,7 +37,8 @@
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.9.4",
-    "postcss-loader": "^7.3.3",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^7.3.4",
     "sass": "^1.94.0",
     "sass-loader": "^13.3.3",
     "style-loader": "^4.0.0",
@@ -54,5 +55,8 @@
     "plugins": {
       "autoprefixer": {}
     }
+  },
+  "dependencies": {
+    "swiper": "^12.0.3"
   }
 }
